cargados mas casos

--- a/analisis/notebooks/analisis.ipynb
+++ b/analisis/notebooks/analisis.ipynb
@@ -24,7 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La función imprimir_items(n) tiene un orden de complejidad O(n) porque el tiempo de ejecución de la función crece linealmente con el tamaño de la entrada n"
+    "- El parámetro de la función es n y se ejecutaron n operaciones\n",
+    "- La función imprimir_items(n) tiene un orden de complejidad O(n) porque el tiempo de ejecución de la función crece linealmente con el tamaño de la entrada n"
    ]
   },
   {
@@ -54,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Descartar constantes es una forma de simplificar nuestra notacion O-Grande. Funciona de la siguiente manera."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -75,7 +83,7 @@
    "source": [
     "En la ejecución del programa anterior, pasamos un 10 como parámetro y obtuvimos 20 items. \n",
     "Cada ciclo for se ejecutó con una complejidad temporal de n.\n",
-    "Es decir, que en total tenemos n + n = 2n.\n",
+    "Es decir, que en total tenemos n + n = 2n y nuestro código corre con una complejidad temporal de O(2n).\n",
     "Pero para estos casos descartamos las constantes y simplemente decimos que corre con una \n",
     "complejidad temporal de O(n)."
    ]
@@ -152,6 +160,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta es otra técnica de simplificación"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -177,6 +192,144 @@
     "- En total sería O(n^2 + n)\n",
     "- Pero solamente nos interesa el comportamiento del codigo cuando n es lo suficientemente grande. Llegado a ese punto, solamente nos va a interesar el aporte que haga n^2, y vamos a descartar el aporte de n.\n",
     "- Es decir, que para simplificar, vamos a decir que el código anterior tiene un orden de complejidad O(n^2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# O(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En los analisis anteriores, a medida que n aumenta, tambien aumentaban el número de operaciones. Pero los casos que vamos a ver a continiación, la operación que se debe realziar es independiente del tamaño de n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumar_itmes(n):\n",
+    "    return n + n # O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumar_itmes(n):\n",
+    "    return n + n + n # O(2)\n",
+    "                     #  ↓\n",
+    "            # por simplicidad se considera O(1)\n",
+    "                     #  ↓\n",
+    "                     # O(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grafica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](<../data/03 - O(1).png>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# O(log n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imprimir_items(n):\n",
+    "    i = n\n",
+    "    cont = 1\n",
+    "    while i > 1:\n",
+    "        i = i // 2  # Reducimos el valor a la mitad en cada iteración\n",
+    "        print(cont, ' - ', i)        \n",
+    "        cont += 1\n",
+    "\n",
+    "imprimir_items(16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- la operación dentro del bucle divide i por 2 en cada iteración\n",
+    "- el número de iteraciones es proporcional al lagoritmo en base 2 de n, es decir, O(log n)\n",
+    "- una pregunta para analizar este algoritmo es, ¿cuantas veces tengo que dividir el 16 para llegar a 1? Rta: 4 veces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imprimir_items(1073741824)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gráfica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](<../data/04 - O(log n).png>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# O(n * log n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un ejemplo típico de complejidad O(n log n) es un algoritmo que realiza n veces un proceso logarítmico en cada iteración"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def n_logaritmico(n):\n",
+    "    for i in range(n):  # Bucle lineal O(n)\n",
+    "        j = n\n",
+    "        while j > 1:  # Bucle logarítmico O(log n)\n",
+    "            j = j // 2\n",
+    "            print(f\"i: {i}, j: {j}\")\n",
+    "\n",
+    "n_logaritmico(8)"
    ]
   }
  ],
