--- a/analisis/notebooks/analisis.ipynb
+++ b/analisis/notebooks/analisis.ipynb
@@ -331,6 +331,93 @@
     "\n",
     "n_logaritmico(8)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gráfica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](<../data/O(n log n).png>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Diferentes parámetros de entrada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imprimir_items(n):\n",
+    "    for i in range(n):\n",
+    "        print(i)\n",
+    "\n",
+    "    for j in range(n):\n",
+    "        print(j)\n",
+    "\n",
+    "# Esto era O(n) + O(n) = O(2n) = O(n)\n",
+    "\n",
+    "imprimir_items(10) # 20 operaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imprimir_items(a, b):\n",
+    "    for i in range(a):\n",
+    "        print(i)\n",
+    "\n",
+    "    for j in range(b):\n",
+    "        print(j)\n",
+    "\n",
+    "# Esto ES O(a) + O(b) = O(a + b)\n",
+    "\n",
+    "imprimir_items(5, 10) # 15 operaciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los bucles no están anidados, por lo que las operaciones del primer bucle no afectan al segundo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imprimir_items(a, b):\n",
+    "    for i in range(a):\n",
+    "        for j in range(b):\n",
+    "            print(i, j)\n",
+    "\n",
+    "# Esto ES O(a) * O(b) = O(a * b)\n",
+    "\n",
+    "imprimir_items(5, 10) # 50 operaciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los bucles sí estan anidados, por lo que el número de operaciones es el producto de a y b"
+   ]
   }
  ],
  "metadata": {
