arregladas las graficas

--- a/analisis/notebooks/analisis.ipynb
+++ b/analisis/notebooks/analisis.ipynb
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](../data/O(n^2).png)"
+    "![alt text](<../data/02 - O(n^2).png>)"
    ]
   },
   {
@@ -343,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](<../data/O(n log n).png>)"
+    "![alt text](<../data/05 - O(n log n).png>)"
    ]
   },
   {
